--- a/land10.html
+++ b/land10.html
@@ -272,37 +272,55 @@
             </div>
         </section>
 
-        <!-- Negotiation Strategy (Standard) -->
+        <!-- Integrated Strategy Section (Replaces Standard) -->
         <section>
             <h3 class="font-bold text-xl text-slate-800 mb-6 flex items-center">
-                <i class="fas fa-handshake mr-3 text-emerald-600"></i> ประเด็นต่อรองมาตรฐาน (Standard Strategy)
+                <i class="fas fa-chess-king mr-3 text-emerald-600"></i> กลยุทธ์การเจรจาเชิงลึก (Personality-Based Strategy)
             </h3>
+            <p class="text-slate-500 mb-6 text-sm">
+                วิเคราะห์แผนการต่อรองใหม่ โดยปรับให้เข้ากับจริตของผู้ขายที่เป็นคน "ใจใหญ่ ตัดสินใจเร็ว แต่ขี้รำคาญ" เพื่อเพิ่มโอกาสปิดการขายที่ 100 ล้านบาท
+            </p>
             <div class="grid md:grid-cols-3 gap-6">
-                <!-- Point 1 -->
-                <div class="bg-white p-6 rounded-xl shadow-sm border border-slate-100 hover:shadow-md transition-shadow group">
-                    <div class="w-12 h-12 bg-red-100 rounded-full flex items-center justify-center text-red-600 mb-4 group-hover:scale-110 transition-transform">
-                        <i class="fas fa-chart-area text-xl"></i>
+                <!-- Strategy 1 -->
+                <div class="bg-white p-6 rounded-xl shadow-sm border-l-4 border-emerald-500 hover:shadow-md transition-all group">
+                    <div class="flex items-center justify-between mb-4">
+                        <div class="w-10 h-10 bg-emerald-100 rounded-full flex items-center justify-center text-emerald-600">
+                            <i class="fas fa-bullseye text-lg"></i>
+                        </div>
+                        <span class="text-xs font-bold px-2 py-1 bg-slate-100 rounded text-slate-500">Price</span>
                     </div>
-                    <h4 class="font-bold text-lg mb-2 group-hover:text-red-700 transition-colors">1. พื้นที่ขาด 20 ตร.ว.</h4>
-                    <p class="text-sm text-slate-600 leading-relaxed">ใช้จุดที่ "หย่อนไป 20 วา" เป็นประเด็นในการขอลดราคาแบบเหมา (Lump Sum) แทนการคิดต่อตารางวา อาจขอปัดเศษลงจาก 106.2 ล้าน เหลือ <strong>100-102 ล้านบาท</strong> ถ้วน</p>
+                    <h4 class="font-bold text-lg mb-2 text-slate-800">1. เสนอ "ตัวเลขกลมๆ" (Magic Number)</h4>
+                    <p class="text-sm text-slate-600 leading-relaxed">
+                        <span class="font-semibold text-emerald-600">ห้ามต่อรองทีละบาท/ตร.ว.</span> ให้ยื่นข้อเสนอซื้อเหมาที่ <strong>"100 ล้านบาทถ้วน"</strong> ทันที โดยอ้างอิงความตั้งใจจริงที่จะทำโครงการใหญ่ (ซึ่งถูกจริตเขา) การต่อรองจุกจิกเรื่องพื้นที่ขาด 20 ตร.ว. อาจทำให้เขารำคาญและล้มดีลได้ ให้ใช้ตัวเลขนี้เป็น "ราคาใจใจ"
+                    </p>
                 </div>
 
-                <!-- Point 2 -->
-                <div class="bg-white p-6 rounded-xl shadow-sm border border-slate-100 hover:shadow-md transition-shadow group">
-                    <div class="w-12 h-12 bg-blue-100 rounded-full flex items-center justify-center text-blue-600 mb-4 group-hover:scale-110 transition-transform">
-                        <i class="fas fa-file-invoice-dollar text-xl"></i>
+                <!-- Strategy 2 -->
+                <div class="bg-white p-6 rounded-xl shadow-sm border-l-4 border-blue-500 hover:shadow-md transition-all group">
+                     <div class="flex items-center justify-between mb-4">
+                        <div class="w-10 h-10 bg-blue-100 rounded-full flex items-center justify-center text-blue-600">
+                            <i class="fas fa-stopwatch text-lg"></i>
+                        </div>
+                        <span class="text-xs font-bold px-2 py-1 bg-slate-100 rounded text-slate-500">Condition</span>
                     </div>
-                    <h4 class="font-bold text-lg mb-2 group-hover:text-blue-700 transition-colors">2. ค่าโอนและภาษี</h4>
-                    <p class="text-sm text-slate-600 leading-relaxed">ราคา 90,000 บาท/ตร.ว. ถือเป็นราคาตลาด (Market Price) สำหรับโซนนี้ ควรต่อรองให้ <strong>"ผู้ขายเป็นผู้ออกค่าใช้จ่าย ณ กรมที่ดินทั้งหมด"</strong> (ค่าโอน 2%, ภาษีธุรกิจเฉพาะ 3.3% หรืออากร) ซึ่งจะช่วยลดต้นทุนให้ NSL ได้ประมาณ 3-5 ล้านบาท</p>
+                    <h4 class="font-bold text-lg mb-2 text-slate-800">2. ใช้ความเร็วแลกค่าโอน (Speed for Fees)</h4>
+                    <p class="text-sm text-slate-600 leading-relaxed">
+                        งัดจุดแข็งเรื่อง <strong>"พร้อมโอน/พร้อมวางมัดจำ"</strong> มาใช้ เพราะเขาเป็นคนใจร้อน ไม่ชอบรอ หาก NSL ยืนยันว่าพร้อมจบใน 30 วัน ให้ขอแลกเปลี่ยนให้ <strong>"ผู้ขายออกค่าโอนทั้งหมด"</strong> ในราคานี้ เขาจะมองว่าคุ้มค่ากับเวลาที่ไม่ต้องเสียไป
+                    </p>
                 </div>
 
-                <!-- Point 3 -->
-                <div class="bg-white p-6 rounded-xl shadow-sm border border-slate-100 hover:shadow-md transition-shadow group">
-                    <div class="w-12 h-12 bg-purple-100 rounded-full flex items-center justify-center text-purple-600 mb-4 group-hover:scale-110 transition-transform">
-                        <i class="fas fa-layer-group text-xl"></i>
+                <!-- Strategy 3 -->
+                <div class="bg-white p-6 rounded-xl shadow-sm border-l-4 border-amber-500 hover:shadow-md transition-all group">
+                     <div class="flex items-center justify-between mb-4">
+                        <div class="w-10 h-10 bg-amber-100 rounded-full flex items-center justify-center text-amber-600">
+                            <i class="fas fa-crown text-lg"></i>
+                        </div>
+                        <span class="text-xs font-bold px-2 py-1 bg-slate-100 rounded text-slate-500">Psychology</span>
                     </div>
-                    <h4 class="font-bold text-lg mb-2 group-hover:text-purple-700 transition-colors">3. สภาพที่ดิน (Land Condition)</h4>
-                    <p class="text-sm text-slate-600 leading-relaxed">ตรวจสอบระดับดินเทียบกับถนน หากต้องถมดินเพิ่ม ใช้เป็นข้อต่อรองขอลดราคา หรือขอให้ผู้ขายเคลียร์พื้นที่/รื้อถอนสิ่งปลูกสร้างเดิม (ถ้ามี) ให้เรียบร้อยก่อนโอน</p>
+                    <h4 class="font-bold text-lg mb-2 text-slate-800">3. บริหารอัตตา (Ego Management)</h4>
+                    <p class="text-sm text-slate-600 leading-relaxed">
+                        <span class="text-red-500 font-semibold">เลี่ยงการติสภาพที่ดิน</span> (เช่น ที่ต่ำต้องถมเยอะ) เพราะเป็นการหักหน้า ให้เปลี่ยนเป็นการ <strong>"ชื่นชมศักยภาพทำเล"</strong> แทน แล้วขอความอนุเคราะห์ในฐานะผู้ใหญ่ ให้ช่วยเคลียร์พื้นที่ให้พร้อมสำหรับการพัฒนา เพื่อให้สมเกียรติกับแปลงที่ดิน
+                    </p>
                 </div>
             </div>
         </section>
