--- a/sd_dashboard.html
+++ b/sd_dashboard.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="text-right hidden md:block">
                     <div class="text-sm opacity-90">Prepared by</div>
-                    <div class="font-bold text-lg">Def to Design</div>
+                    <div class="font-bold text-lg">DSS NSL</div>
                     <div class="text-xs opacity-75">Data Analytics & IR Consulting</div>
                 </div>
             </div>
@@ -49,7 +49,7 @@
             </h3>
             <p class="text-sm text-slate-600">
                 รายการคำถามนี้ออกแบบมาเพื่อดึงข้อมูลจากฝ่าย Sustainability เพื่อนำไปวิเคราะห์ผลกระทบทางการเงิน (Financial Impact) 
-                เพื่อใช้ในการจัดทำรายงาน 56-1 One Report และสื่อสารกับนักลงทุน โดยเน้นการเชื่อมโยงข้อมูล ESG เข้ากับผลประกอบการ (Bottom Line)
+                และสื่อสารกับนักลงทุน โดยเน้นการเชื่อมโยงข้อมูล ESG เข้ากับผลประกอบการ (Bottom Line)
             </p>
         </div>
 
@@ -259,7 +259,7 @@
                 <i class="ph ph-printer"></i> Print / Save as PDF
             </button>
             <p class="text-xs text-slate-400 mt-6">
-                © 2025 Def to Design Co., Ltd. - Confidential for NSL Foods PLC Usage Only.
+                © 2025 DSS NSL Co., Ltd. - Confidential for NSL Foods PLC Usage Only.
             </p>
         </div>
 
