--- a/sd_dashboard.html
+++ b/sd_dashboard.html
@@ -67,11 +67,11 @@
                 <!-- Q1 -->
                 <div class="bg-white p-6 rounded-xl shadow-sm border border-slate-100 card-hover transition-all duration-300">
                     <div class="text-xs text-slate-400 font-bold mb-2">ENERGY MANAGEMENT (การจัดการพลังงาน)</div>
-                    <h4 class="font-bold text-slate-800 mb-3">Q1: ผลตอบแทนจากการลงทุนพลังงาน (ROI)</h4>
-                    <p class="text-sm text-slate-600 mb-4">โครงการ Solar Rooftop หรือการเปลี่ยนเครื่องจักรประหยัดพลังงานในปีที่ผ่านมา ช่วยลดค่าไฟฟ้าจริงคิดเป็นกี่บาท และมี Payback Period (ระยะเวลาคืนทุน) ตามเป้าหรือไม่?</p>
+                    <h4 class="font-bold text-slate-800 mb-3">Q1: ระยะเวลาคืนทุน (Payback Period)</h4>
+                    <p class="text-sm text-slate-600 mb-4">โครงการ Solar Rooftop หรือการเปลี่ยนเครื่องจักรประหยัดพลังงานในปีที่ผ่านมา มีระยะเวลาคืนทุน (Payback Period) กี่ปี และเป็นไปตามเป้าหมายที่วางไว้หรือไม่?</p>
                     <div class="bg-slate-50 p-3 rounded border border-slate-200">
                         <span class="text-xs font-bold text-blue-600">Variables (ตัวแปรที่ต้องการ):</span>
-                        <p class="text-xs text-slate-500 mt-1">Cost Saving (THB/Year), % IRR (อัตราผลตอบแทนภายใน) ของโครงการ</p>
+                        <p class="text-xs text-slate-500 mt-1">Payback Period (ระยะเวลาคืนทุน - ปี)</p>
                     </div>
                 </div>
 
