--- a/toward2030.html
+++ b/toward2030.html
@@ -312,6 +312,36 @@
         </div>
     </section>
 
+    <!-- Testimonial Section -->
+    <section class="py-20 bg-slate-50 border-t border-slate-200">
+        <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="bg-white rounded-3xl shadow-xl p-8 md:p-12 relative">
+                <!-- Quote Icon -->
+                <div class="absolute top-0 left-0 transform -translate-x-4 -translate-y-4 md:-translate-x-6 md:-translate-y-6">
+                    <div class="w-16 h-16 bg-brand-accent rounded-full flex items-center justify-center shadow-lg text-white">
+                        <i data-lucide="quote" class="w-8 h-8 fill-current"></i>
+                    </div>
+                </div>
+
+                <div class="text-center relative z-10 pt-4">
+                    <h3 class="font-display text-lg text-brand-primary font-bold uppercase tracking-wider mb-6">คำนิยม</h3>
+                    <p class="text-xl md:text-2xl text-slate-700 font-light italic leading-relaxed mb-8">
+                        "สิ่งที่หนังสือเล่มนี้ทำได้อย่างดีเยี่ยมคือการวาง 'แนวทางการทำงาน' ที่ชัดเจนและนำไปใช้ได้จริง ไม่ใช่แค่ทฤษฎีลอยๆ พร้อมทั้งชี้ให้เห็น 'สิ่งที่ควรตระหนักถึง' ในการทำธุรกิจยุคใหม่ โดยเฉพาะเรื่องความเสี่ยงและ ESG ได้อย่างคมคาย ถือเป็นพิมพ์เขียวคุณภาพที่ผู้นำทุกคนควรอ่านครับ"
+                    </p>
+                    
+                    <div class="flex items-center justify-center space-x-4">
+                        <div class="w-12 h-1 bg-slate-200"></div>
+                        <div class="text-center">
+                            <h4 class="font-display text-xl font-bold text-slate-900">นายอานนท์ อาภาเขต</h4>
+                            <p class="text-slate-500 text-sm mt-1">ผู้เขียนคำนิยม</p>
+                        </div>
+                        <div class="w-12 h-1 bg-slate-200"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- CTA Footer -->
     <footer class="bg-slate-900 text-slate-400 py-12 border-t border-slate-800">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
