--- a/index.html
+++ b/index.html
@@ -374,7 +374,8 @@
 
             useEffect(() => {
                 setMounted(true);
-                const savedApps = localStorage.getItem('dss-portal-v11-clean'); 
+                // Force update key to v12 to clear old cache on GitHub Pages
+                const savedApps = localStorage.getItem('dss-portal-v12'); 
                 if (savedApps) {
                     setApps(JSON.parse(savedApps));
                 } else {
@@ -383,7 +384,7 @@
             }, []);
 
             useEffect(() => {
-                localStorage.setItem('dss-portal-v11-clean', JSON.stringify(apps));
+                localStorage.setItem('dss-portal-v12', JSON.stringify(apps));
             }, [apps]);
 
             const handleAddApp = (newApp) => {
