--- a/suthep.html
+++ b/suthep.html
@@ -122,19 +122,33 @@
                 </ul>
             </div>
 
-            <div class="mb-4">
-                <h4 class="font-bold text-red-600 flex items-center gap-2">⚠️ จุดที่น่ากังวล (Critical Concerns)</h4>
-                <ul class="list-disc list-inside text-sm text-gray-700 mt-2 space-y-1">
-                    <li><strong>Job Hopping (Red Flag):</strong> ประวัติการทำงาน 2 ที่ล่าสุดสั้นมาก
-                        <ul class="pl-6 text-xs text-gray-500 mt-1">
-                            <li>• ที่ปัจจุบัน (ICT): พ.ย. 2024 - ปัจจุบัน (~1 ปี)</li>
-                            <li>• ที่ก่อนหน้า (Milott): ก.ค. 2023 - ต.ค. 2024 (1 ปี 3 เดือน)</li>
-                        </ul>
-                        <span class="text-xs text-red-500 block mt-1">*ความเสี่ยงคือ อาจจะอยู่กับเราได้ไม่นาน หรือทนแรงกดดัน/วัฒนธรรมองค์กรไม่ได้</span>
-                    </li>
-                    <li><strong>English Proficiency:</strong> ประเมินตนเองระดับ "Fair" (พอใช้) อาจเป็นอุปสรรคหากต้อง Report ผู้บริหารต่างชาติ หรืออ่าน Manual เครื่องจักร/มาตรฐานสากลที่ซับซ้อน</li>
-                    <li><strong>Educational Foundation:</strong> GPA ค่อนข้างน้อย (2.46) แม้จะจบมานานแล้ว แต่อาจสะท้อนถึงพื้นฐานความรับผิดชอบในวัยเรียน หรือตรรกะเชิงวิชาการที่อาจไม่แน่นปึ้กเมื่อเทียบกับ Engineer โดยตรง</li>
-                </ul>
+            <div class="mb-8">
+                <h4 class="font-bold text-red-600 flex items-center gap-2 border-b border-red-200 pb-2 mb-2">⚠️ จุดที่น่ากังวล (Critical Concerns)</h4>
+                
+                <!-- Concern 1: Job Hopping -->
+                <div class="mb-3">
+                    <p class="text-sm font-semibold text-gray-800">1. Stability & Retention Risk (ความเสี่ยงเรื่องความยั่งยืน)</p>
+                    <p class="text-xs text-gray-600">ประวัติการทำงาน 2 ที่ล่าสุดสั้นมาก (ICT: ~1 ปี, Milott: 1.3 ปี) สะท้อนพฤติกรรม "Quick Exit" เมื่อเจอปัญหาหรือความไม่ชัดเจน อาจไม่อยู่ยาวเพื่อสร้างรากฐานให้องค์กร</p>
+                </div>
+
+                <!-- Concern 2: Location -->
+                <div class="mb-3">
+                    <p class="text-sm font-semibold text-gray-800">2. Location & Commute (ระยะทางและการเดินทาง) <span class="text-red-500 text-[10px] ml-1">NEW</span></p>
+                    <p class="text-xs text-gray-600">พักอยู่ <strong>"แพรกษาใหม่ สมุทรปราการ"</strong> แต่มาทำงาน <strong>"NSL บางบัวทอง นนทบุรี"</strong> ระยะทางไป-กลับกว่า 100-120 กม./วัน ผ่านจุดรถติดหนัก แม้จะมีรถส่วนตัว แต่ความล้าจากการเดินทาง (Commute Fatigue) เป็นปัจจัยหลักที่ทำให้คนลาออกภายใน 6 เดือนแรก</p>
+                </div>
+
+                <!-- Concern 3: Tech Stack -->
+                <div class="mb-3">
+                    <p class="text-sm font-semibold text-gray-800">3. Digital & ERP Competency (ทักษะด้านระบบ) <span class="text-red-500 text-[10px] ml-1">NEW</span></p>
+                    <p class="text-xs text-gray-600">ใน Resume ระบุทักษะคอมพิวเตอร์เพียง MS Office, AutoCAD, AI <strong>*ไม่มีการระบุถึงระบบ ERP, SAP หรือ Manufacturing Software*</strong> ซึ่งจำเป็นมากสำหรับ Factory Manager ยุคใหม่ที่ต้องดู Data Real-time หากองค์กรใช้ระบบซับซ้อน อาจต้องใช้เวลาสอนงานนาน</p>
+                </div>
+
+                <!-- Concern 4: English -->
+                <div class="mb-3">
+                    <p class="text-sm font-semibold text-gray-800">4. Language Barrier</p>
+                    <p class="text-xs text-gray-600">Self-assessment ระดับ "Fair" อาจจำกัดความสามารถในการสื่อสารกับ Supplier ต่างชาติ หรือการอ่าน Technical Manual ของเครื่องจักรใหม่ๆ</p>
+                </div>
+
             </div>
         </div>
 
@@ -184,18 +198,18 @@
                 <p class="text-sm text-gray-600">"ลองให้อธิบายกระบวนการแก้ไขปัญหา (Root Cause Analysis) เป็นภาษาอังกฤษสั้นๆ" (เพื่อดูว่าระดับ Fair ใช้งานจริงได้แค่ไหน)</p>
             </div>
             <div class="bg-gray-50 p-4 rounded-lg">
-                <h5 class="font-bold text-gray-800 mb-2">3. ความคาดหวังเรื่องรายได้ (Salary Negotiation)</h5>
-                <p class="text-sm text-gray-600">"ฐานเงินเดือนที่ขอ 150k เพิ่มจากฐานเดิม 110k ค่อนข้างมาก หากบริษัทเสนอฐานน้อยกว่านี้แต่เพิ่ม Incentive ตาม Performance จะรับได้ไหม?"</p>
+                <h5 class="font-bold text-gray-800 mb-2">3. Commute Check (ตรวจสอบความพร้อมการเดินทาง)</h5>
+                <p class="text-sm text-gray-600">"บ้านพักอยู่สมุทรปราการ แต่โรงงานอยู่บางบัวทอง มีแผนการเดินทางอย่างไร? หรือมีแผนจะย้ายที่พักหรือไม่?" (เพื่อประเมินความเสี่ยง Retention)</p>
             </div>
             <div class="bg-gray-50 p-4 rounded-lg">
-                <h5 class="font-bold text-gray-800 mb-2">4. การจัดการทีม (Leadership Style)</h5>
-                <p class="text-sm text-gray-600">"ในฐานะ Factory Manager คุณมีวิธีจัดการกับพนักงานเก่าแก่ที่ต่อต้านการเปลี่ยนแปลงอย่างไร?" (ทดสอบ EQ และการจัดการ Conflict)</p>
+                <h5 class="font-bold text-gray-800 mb-2">4. Tech & ERP Skills</h5>
+                <p class="text-sm text-gray-600">"เคยใช้งานระบบ ERP หรือ SAP ในการวางแผนการผลิตหรือไม่? ถ้าไม่เคย พร้อมเรียนรู้และปรับตัวกับระบบใหม่แค่ไหน?"</p>
             </div>
         </div>
     </div>
 
     <div class="text-center text-gray-400 text-xs mt-8 pb-8">
-        Prepared by AI Assistant | Based on provided document "ใบสมัครงานรายเดือนNSL rev03 01.02.25.pdf"
+        Powered by DSS NSL | Based on provided document "ใบสมัครงานรายเดือนNSL rev03 01.02.25.pdf"
     </div>
 
 </body>
