--- a/random.html
+++ b/random.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>Lucky Draw</title>
     <style>
         /* This ensures the iframe takes up the whole screen without scrollbars on the outside */
         body, html {
