--- a/random.html
+++ b/random.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="th">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lucky Draw</title>
-    <style>
-        /* This ensures the iframe takes up the whole screen without scrollbars on the outside */
+    <title>NSL Foods DSS</title> <style>
+        /* ตั้งค่าให้ body เต็มจอและไม่มีขอบ */
         body, html {
             margin: 0;
             padding: 0;
             height: 100%;
             overflow: hidden;
         }
+        /* ตั้งค่า iframe ให้กว้างและสูง 100% ของหน้าจอ */
         iframe {
             display: block;
             width: 100%;
             height: 100%;
-            border: none; /* Removes the default border around the iframe */
+            border: none; /* ลบขอบของ iframe ออก */
         }
     </style>
 </head>
 <body>
-    <iframe src="https://studio--studio-4548432275-9c52a.us-central1.hosted.app/">
-        <p>Your browser does not support iframes.</p>
+    <iframe src="https://dssnslfoods.github.io/DSS/random.html">
+        <p>ขออภัย Browser ของคุณไม่รองรับการแสดงผลแบบ Iframe</p>
     </iframe>
 </body>
 </html>
