--- a/luckydraw.html
+++ b/luckydraw.html
@@ -19,7 +19,7 @@
     </style>
 </head>
 <body>
-    <iframe src="https://dssnslfoods.github.io/DSS/random.html">
+    <iframe src="https://studio--studio-4548432275-9c52a.us-central1.hosted.app/">
         <p>Browser ของคุณไม่รองรับ Iframe</p>
     </iframe>
 </body>
