--- a/esg.html
+++ b/esg.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ESG Platform</title>
+    <title>ESG Smart Performance System</title>
     <style>
         /* ตั้งค่าให้หน้าเว็บไม่มีขอบและเต็มจอ */
         body, html {
