Update iframe source URL for ESG Hub

--- a/esg.html
+++ b/esg.html
@@ -38,7 +38,7 @@
     <!-- iframe ที่ดึงหน้าเว็บเป้าหมายมาแสดง -->
     <iframe 
         class="app-frame" 
-        src="https://vital-esg-hub.lovable.app" 
+        src="https://esgnsl.def2design.com/" 
         title="Vital ESG Hub"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
         allowfullscreen>
