--- a/irtalk.html
+++ b/irtalk.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>IR Talk Registration (LIFF)</title>
+  <title>IR Talk Registration</title>
 
   <!-- LIFF SDK -->
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
@@ -120,9 +120,9 @@
     /**********************
      * CONFIG (แก้ 3 ค่า)
      **********************/
-    const LIFF_ID = "PUT_YOUR_LIFF_ID_HERE";
+    const LIFF_ID = "2008928307-8xnpCPKG";
     const N8N_WEBHOOK_URL = "https://def2design.app.n8n.cloud/webhook/liff/register";
-    const SHARED_SECRET = "PUT_YOUR_SHARED_SECRET_HERE";
+    const SHARED_SECRET = "nsl-ir-liff-2026-secret-9xAqP!";
 
     // fixed metadata (optional)
     const SOURCE = "LIFF-IR-TALK";
